# Prism

./: .gitignore  CMakeLists.txt  README.md  build-mac.sh  build.sh
.github/workflows/: release.yml
Resources/Presets/: Default.xml
Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Source/DSP/: AMModulator.cpp  AMModulator.h  BitCrusher.cpp  BitCrusher.h  EnvelopeShaper.cpp  EnvelopeShaper.h  Overdrive.cpp  Overdrive.h  RateShifter.cpp  RateShifter.h  SamplePlayer.cpp  SamplePlayer.h
Source/Sync/: SyncDivisions.h  TempoSync.cpp  TempoSync.h
Source/UI/: LCDDisplay.cpp  LCDDisplay.h  LookAndFeel.cpp  LookAndFeel.h  VoiceElement.cpp  VoiceElement.h  WaveformDisplay.cpp  WaveformDisplay.h
Source/Voice/: Voice.cpp  Voice.h  VoiceManager.cpp  VoiceManager.h
cmake/: windows-toolchain.cmake
